docker container orchestration

--- a/client/src/Pages/PlayGround/styles.css
+++ b/client/src/Pages/PlayGround/styles.css
@@ -1,124 +1,7 @@
-* {
-  box-sizing: border-box;
-}
-
-html, body, .ide-container {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
-.ide-container {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color: #1a1d24;
-  color: #e9ebf0;
-  height: 5%;
-  width: 100%;
-}
-
-.editor-container {
-  display: flex;
-  flex-grow: 1;
-  overflow: hidden;
-  background-color: #1a1d24;
-  color: #e9ebf0;
-  border-top: 1px solid #ccc;
-}
-
-.files {
-  width: 18%;
-  border-right: 1px solid #ccc;
-  overflow-y: auto;
-  padding: 10px;
-}
-
-.editor {
-  flex-grow: 1;
-  overflow-y: auto;
-}
-
-.terminal-container {
-  height: 30%;
-  background-color: #1e1e1e;
-  border-top: 1px solid #ccc;
-}
-
 #terminal .xterm {
   font-family: 'Courier New', monospace !important;
   font-size: 14px !important;
-  background-color: #1e1e1e !important;
-  color: #d4d4d4 !important;
-}
-
-.file-tree {
-  font-size: 14px;
-}
-
-.tree-node {
-  display: flex;
-  flex-direction: column;
-}
-
-.tree-item {
-  padding: 6px;
-}
-
-.tree-item:hover {
-  background-color: #34c2ff4b;
-  border-radius: 4px;
-}
-
-.tree-node span {
-  display: flex;
-  align-items: center;
-}
-
-.tree-node span:hover {
-  cursor: pointer;
-}
-
-.run-button {
-  border-style: none;
-  background-color: #4ade80;
-  padding: 6px;
-  border-radius: 5px;
-  cursor: pointer;
-  color: #262626;
-  font-weight: 400;
-  font-size: medium;
-}
-
-.run-button:hover {
-  background-color: #34c2ffe7;
-  text-decoration: underline;
-}
-
-.run-button:active {
-  background-color: #038031;
-}
-
-.profile-button {
-  border-style: none;
-  background-color:#1a1d24;
-  padding: 6px;
-  border-radius: 5px;
-  cursor: pointer;
-  color: #e9ebf0;
-  font-weight: 400;
-  font-size: 24px;
-}
-
-.profile-button:hover {
-  background-color: #34c2ff86;
-  text-decoration: underline;
+  background-color: #fffafa !important;
+  /* color: #d4d4d4 !important; */
+  color: chartreuse !important;
 }
