--- a/client/src/Pages/PlayGround/components/editor.css
+++ b/client/src/Pages/PlayGround/components/editor.css
@@ -1,3 +1,22 @@
 .cursor-marker{
     background-color: rgb(47, 0, 255); /* Green */
 }
+.cursor-decoration {
+    background: rgba(0, 250, 133, 0.377);
+    width: 2px !important;
+    height: 1em;
+    pointer-events: none;
+    z-index: 100;
+  }
+  
+  /* Generate different colors for different users */
+  .cursor-decoration::after {
+    content: '';
+    position: relative;
+    top: -2px;
+    left: -2px;
+    width: 6px;
+    height: 1em;
+    border-radius: 50%;
+    background: inherit;
+  }
